Fixed playerdata not saving properly